alterções no css

--- a/ArquivosWeb/usuario/insert.html
+++ b/ArquivosWeb/usuario/insert.html
@@ -26,12 +26,14 @@
 				<option>Profissional</option>
 				<option>Estudante</option>
 			</select>
-			
+			<br>
 			<label>Filiation:</label>
 			<input type="text" name="Filiation">
 			<br>
-			<input type="submit" name="" value="Insert">
-			<button type="button">Back</button>
+			<div id="butao">
+				<input type="submit" name="" value="Insert">
+				<button type="button">Back</button>
+			</div>
 		</form>
 	</div>
 </body>
